// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> variant body should match snapshot 1`] = `
<div>
  <span
    class="css-y58272"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant caption should match snapshot 1`] = `
<div>
  <span
    class="css-im2vug"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant eyebrow should match snapshot 1`] = `
<div>
  <span
    class="css-lb3pc8"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant heading should match snapshot 1`] = `
<div>
  <span
    class="css-wlpqg1"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant hero should match snapshot 1`] = `
<div>
  <span
    class="css-1rt8qjt"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant label should match snapshot 1`] = `
<div>
  <span
    class="css-4i50vq"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant monospace should match snapshot 1`] = `
<div>
  <span
    class="css-1x2zn30"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant small should match snapshot 1`] = `
<div>
  <span
    class="css-1xewts9"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant subtitle should match snapshot 1`] = `
<div>
  <span
    class="css-1hyxv5m"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Text /> variant title should match snapshot 1`] = `
<div>
  <span
    class="css-124izrn"
  >
    Lorem Ipsum
  </span>
</div>
`;
